Changelog for BlueProximity

1.2 "call me HIG" - to be released
- modified: scanning now shows by message and watch cursor (Bug #1776732)
- modified: every control directly accessable via keyboard (Bug #1776732)
- modified: layout optimized by Tobias Jakobs (Bug #1776732)
- modified: control range optimized to possible value range (Bug #1776732)

1.1 "see what's coming" - released 2007-08-18
- fixed: icon shows connecting process
- fixed: no window flicker on startup (Bug #1772241) 
- fixed: first window not displaced at upper left corner (Bug #1772241)
- fixed: wrong set MAC when no config file exists, now shows correctly "not configured" in icon tooltip
- added: startup script start_proximity.sh to be run from anywhere (link it in your session startup)
- added: automatically show settings screen on first startup (Feature #1772589)
- added: pause mode via icon's context menu (Feature #1776527)
- added: Ubuntu Feisty package (Feature #1772590)
- modified: some aspects regarding easier packaging
- modified: logo
- modified: switching most bt functions to pybluez, only rssi detection relies on hcitool

1.0 "the not final one" - released 2007-08-11
initial public release