@@ -2,7 +2,7 @@
 <!DOCTYPE glade-project SYSTEM "http://glade.gnome.org/glade-project-2.0.dtd">
 
 <glade-project>
-  <name>Proximity</name>
-  <program_name>proximity</program_name>
+  <name>BlueProximity</name>
+  <program_name>blueproximity</program_name>
   <gnome_support>FALSE</gnome_support>
 </glade-project>
