@@ -5,6 +5,8 @@ Changelog for BlueProximity
 - modified: every control directly accessable via keyboard (Bug #1776732)
 - modified: layout optimized by Tobias Jakobs (Bug #1776732)
 - modified: control range optimized to possible value range (Bug #1776732)
+- modified: gnome screensaver now locks the screen no matter what its settings say (Bug #1778306)
+- modified: new program info dialog accessable via icon's context menu (Bug #1776732)
 
 1.1 "see what's coming" - released 2007-08-18
 - fixed: icon shows connecting process
